--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@linaria/babel-preset": "^5.0.4",
     "@linaria/core": "^6.2.0",
     "@linaria/react": "^6.2.1",
+    "@swc/core": "^1.7.2",
     "@wyw-in-js/babel-preset": "^0.5.4",
     "@wyw-in-js/transform": "^0.5.4",
     "next": "14.2.5",
@@ -30,6 +31,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/testing-library__react-hooks": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "@typescript-eslint/parser": "^7.17.0",
     "eslint": "^8",
