--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "highcharts-react-official": "^3.2.1",
     "next": "14.2.5",
     "next-with-linaria": "^0.7.0",
+    "normalize.css": "^8.0.1",
     "react": "^18",
     "react-dom": "^18",
     "webpack": "^5.93.0",
