--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
   },
   "devDependencies": {
     "@swc/jest": "^0.2.36",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -43,10 +45,11 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.35.0",
+    "husky": "^8.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.3.3",
-    "typescript": "^5",
-    "husky": "^8.0.0"
+    "ts-jest": "^29.2.4",
+    "typescript": "^5"
   }
 }
